<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="379dp"
        android:text="@string/txt_tittle_main"
        android:textColor="@color/primary_text"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="365dp"
        android:layout_height="154dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="199dp"
        android:text="@string/txt_subtittle_main"
        android:textColor="@color/primary_text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="364dp"
        android:layout_height="49dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/tertiary"
        android:text="@string/btn_entrar"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="364dp"
        android:layout_height="49dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="69dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/primary"
        android:text="@string/btn_registrar"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />
</androidx.constraintlayout.widget.ConstraintLayout>