<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principalScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".home.vista.PrincipalScreenActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="625dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/txtCuenta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_cuenta"
            android:textColor="@color/primary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtTarjeta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_tarjeta"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_credito"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="408dp"
        android:layout_height="97dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="482dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.238"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/txtSaldoDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_saldo_disponible"
            android:textColor="#78909C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSaldoNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="32sp"
            android:text=""
            />

        <TextView
            android:id="@+id/txtSaldoTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:gravity="center"
            android:textColor="#78909C"
            android:textSize="14sp"
            android:text=""
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="417dp"
        android:layout_height="81dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="357dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btn_Recargar"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/tertiary"
            android:drawable="@drawable/flecha_pequena_arriba"
            android:text="@string/btn_recargar"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_transferir"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/tertiary"
            android:text="@string/btn_tranferir"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_solicitar"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/tertiary"
            android:text="@string/btn_solicitar"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_retirar"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/tertiary"
            android:text="@string/btn_retirar"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtMoviemientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="230dp"
        android:gravity="start"
        android:text="Movimientos"
        android:textColor="@color/primary_text"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="405dp"
        android:layout_height="299dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMoviemientos">


        <ListView
            android:id="@+id/listViewMovimientos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        />


</androidx.constraintlayout.widget.ConstraintLayout>